tests/NormalTests/paczka1/small_fuzzy/61804591.err
Error in line 5: mpllLvkFt A427 12,32
Error in line 3: mpllLvkFt S504 58,4
Error in line 2: A427 A236 3,4
Error in line 10: edi3zAO A236 49,7
